Removed -shi from japanese cities (it means city)
Other japanese fixes
finally changed uruguay in portoguese to historical correct name

--- a/provinces.yaml
+++ b/provinces.yaml
@@ -3473,7 +3473,7 @@
   hindi: Kokoora
   hungarian: Kokura
   italian: Kokura
-  japanese: Ogura-shi
+  japanese: Ogura
   latvian: Kokura
   lithuanian: Kokura
   norwegian: Kokura
@@ -3505,7 +3505,7 @@
   hindi: Gvaangajhou
   hungarian: Kanton
   italian: Canton
-  japanese: Kōshū-shi
+  japanese: Kōshū
   latvian: Guandžou
   lithuanian: Guangdžou
   norwegian: Guangzhou
@@ -3793,7 +3793,7 @@
   hindi: Hiroshima
   hungarian: Hirosima
   italian: Hiroshima
-  japanese: Hiroshima-shi
+  japanese: Hiroshima
   latvian: Hirosima
   lithuanian: Hirosima
   norwegian: Hiroshima
@@ -6033,7 +6033,7 @@
   hindi: Teeaee Amoniya Paanee
   hungarian: Tianshui
   italian: Tianshui
-  japanese: Amatsu-shi
+  japanese: Amatsu
   latvian: Tianshui
   lithuanian: Tianshui
   norwegian: Ti Ammoniakk Vann
@@ -10353,7 +10353,7 @@
   hindi: Pyongayaang
   hungarian: Phenjan
   italian: Pyongyang
-  japanese: Pinjo jichitai
+  japanese: Heijō
   latvian: Phenjana
   lithuanian: Pchenjanas
   norwegian: Pyongyang
@@ -10385,7 +10385,7 @@
   hindi: Busaan
   hungarian: Puszan
   italian: Pusan
-  japanese: Pusankōikishi
+  japanese: Pusan
   latvian: Pusana
   lithuanian: Busanas
   norwegian: Pusan
@@ -10545,7 +10545,7 @@
   hindi: Kaagoshima
   hungarian: Kagosima
   italian: Kagoshima
-  japanese: Kagoshima-shi
+  japanese: Kagoshima
   latvian: Kagosima
   lithuanian: Kagošima
   norwegian: Kagoshima
@@ -11537,7 +11537,7 @@
   hindi: Dharmee Se
   hungarian: Csangcsun
   italian: Changchun
-  japanese: Chōshun-shi
+  japanese: Chōshun
   latvian: Čančuņa
   lithuanian: Čangčunas
   norwegian: Hsinking
@@ -11857,7 +11857,7 @@
   hindi: Uruma
   hungarian: Ürümcsi
   italian: Ürümqi
-  japanese: Urumuchi-shi
+  japanese: Urumuchi
   latvian: Urumči
   lithuanian: Urumčis
   norwegian: Urumqi
@@ -16593,7 +16593,7 @@
   hindi: Aaomoree Preefekchar
   hungarian: Aomori
   italian: Aomori
-  japanese: Aomori-shi
+  japanese: Aomori
   latvian: Aomori
   lithuanian: Aomoris
   norwegian: Aomori
@@ -16849,7 +16849,7 @@
   hindi: Ziyaamen
   hungarian: Hsziamen
   italian: Xiamen
-  japanese: Amoi-shi
+  japanese: Amoi
   latvian: Sjameņa
   lithuanian: Siamenas
   norwegian: Xiamen
@@ -17073,7 +17073,7 @@
   hindi: Siyol
   hungarian: Szöul
   italian: Seul
-  japanese: Sōrutokubetsushi
+  japanese: Keijō
   latvian: Seula
   lithuanian: Seulas
   norwegian: Seoul
@@ -17265,7 +17265,7 @@
   hindi: Sendai
   hungarian: Szendai
   italian: Sendai
-  japanese: Sendai-shi
+  japanese: Sendai
   latvian: Sendai
   lithuanian: Sendajus
   norwegian: Sendai
@@ -18097,7 +18097,7 @@
   hindi: Shiaan
   hungarian: Hszian
   italian: Xi'an
-  japanese: Shīan-shi
+  japanese: Shīan
   latvian: Sjiaņa
   lithuanian: Sianas
   norwegian: X Ian
@@ -18993,7 +18993,7 @@
   hindi: Golamood
   hungarian: Golmud
   italian: Golmud
-  japanese: Gorumudo-shi
+  japanese: Gorumudo
   latvian: Golmud
   lithuanian: Golmud
   norwegian: Golmud
@@ -19089,7 +19089,7 @@
   hindi: Aboo Dhaabee
   hungarian: Abu-Dzabi
   italian: Abu Dhabi
-  japanese: Abudabi-shi
+  japanese: Abudabi
   latvian: Abū Dabi
   lithuanian: Abu Dabis
   norwegian: Abu Dhabi
@@ -23825,7 +23825,7 @@
   hindi: Naagaasaakee
   hungarian: Nagaszaki
   italian: Nagasaki
-  japanese: Nagasaki-shi
+  japanese: Nagasaki
   latvian: Nagasaki
   lithuanian: Nagasakis
   norwegian: Nagasaki
@@ -24177,7 +24177,7 @@
   hindi: Kaanaazaava
   hungarian: Kanazava
   italian: Kanazawa
-  japanese: Kanazawa-shi
+  japanese: Kanazawa
   latvian: Kanazawa
   lithuanian: Kanadzava
   norwegian: Kanazawa
@@ -24369,7 +24369,7 @@
   hindi: Soojhooo
   hungarian: Szucsou
   italian: Suzhou
-  japanese: Soshū-shi
+  japanese: Soshū
   latvian: Sudžou
   lithuanian: Sudžou
   norwegian: Suzhou
@@ -25105,7 +25105,7 @@
   hindi: Haarabin
   hungarian: Harbin
   italian: Harbin
-  japanese: Harubin-shi
+  japanese: Harubin
   latvian: Harbina
   lithuanian: Charbinas
   norwegian: Harbin
@@ -29233,7 +29233,7 @@
   hindi: Shenayaang
   hungarian: Senjang
   italian: Shenyang
-  japanese: Shin'yō-shi
+  japanese: Shin'yō
   latvian: Šeņjana
   lithuanian: Šenjangas
   norwegian: Mukden
@@ -29937,7 +29937,7 @@
   hindi: Tvacha
   hungarian: Naha
   italian: Naha
-  japanese: Naha-shi
+  japanese: Naha
   latvian: Naha
   lithuanian: Naha
   norwegian: Hud
@@ -30513,7 +30513,7 @@
   hindi: Ga O Bhaee
   hungarian: Kaohsziung
   italian: Kaohsiung
-  japanese: Takao-shi
+  japanese: Takao
   latvian: Gaoxiong
   lithuanian: Gaosiongas
   norwegian: Ga O Bror
@@ -31345,7 +31345,7 @@
   hindi: Badanaamee
   hungarian: Asahigawa
   italian: Asahikawa
-  japanese: Asahikawa-shi
+  japanese: Asahikawa
   latvian: Asahigawa
   lithuanian: Asahikava
   norwegian: Asahikawa
