--- a/states.yaml
+++ b/states.yaml
@@ -512,7 +512,7 @@
   hindi: Baragandee
   hungarian: Franche-Comté
   italian: Franca Contea
-  japanese: 'Furanshu konte '
+  japanese: Furanshu konte
   latvian: Franškontē
   lithuanian: Franš Konte
   norwegian: Franche Comte
@@ -574,7 +574,7 @@
   hindi: Anvitan
   hungarian: Aquitania
   italian: Aquitania
-  japanese: 'Akitēnu '
+  japanese: Akitēnu
   latvian: Akvitānija
   lithuanian: Akvitanija
   norwegian: Aquitaine
@@ -3891,7 +3891,7 @@
   hindi: Gretar Landan Kshetr
   hungarian: Nagyobb Londoni Terulet
   italian: Londra
-  japanese: Yori Okina Rondon Eria
+  japanese: Gurētā Rondon
   latvian: Greater London Apgabals
   lithuanian: Didesnis Londono Plotas
   norwegian: Greater London-omradet
@@ -9290,7 +9290,7 @@
   lithuanian: Urugvajus
   norwegian: Uruguay
   polish: Urugwaj
-  portuguese: Uruguai
+  portuguese: Cisplatina
   romanian: Uruguay
   russian: Urugvaj
   spanish: Uruguay
@@ -16260,7 +16260,7 @@
   hindi: Dakshin Koriya
   hungarian: Dél-Korea
   italian: Corea del Sud
-  japanese: Daikanminkoku
+  japanese: Minamichōsen
   latvian: Dienvidkoreja
   lithuanian: Pietų Koreja
   norwegian: Sør Korea
@@ -16315,14 +16315,14 @@
   dutch: Noord-Korea
   english: North Korea
   estonian: Põhja-Korea
-  finnish: Korean demokraattinen kansantasavalta
+  finnish: Pohjois Korea
   french: Corée du Nord
   german: Nordkorea
   greek: Voreia Korea
   hindi: Uttar Koriya
-  hungarian: Észak-Korea
+  hungarian: Észak Korea
   italian: Corea del Nord
-  japanese: Minshutō no chōsenminshushugijinminkyōwakoku
+  japanese: Kitachōsen
   latvian: Ziemeļkoreja
   lithuanian: Šiaures Koreja
   norwegian: Nord Korea
