Modified some spanish names for USA places

--- a/provinces.yaml
+++ b/provinces.yaml
@@ -11513,7 +11513,7 @@
   portuguese: Saint Louis
   romanian: Saint Louis
   russian: Saint Louis
-  spanish: Saint Louis
+  spanish: San Luis de Ilinueses
   swedish: Saint Louis
   turkish: Saint Louis
   ukrainian: .nan
