--- a/states.yaml
+++ b/states.yaml
@@ -11401,7 +11401,7 @@
   portuguese: Tennessee
   romanian: Tennessee
   russian: Tennessi
-  spanish: Tennessee
+  spanish: Tenesí
   swedish: Tennessee
   turkish: Tennessee
   ukrainian: Tennessi
@@ -11618,7 +11618,7 @@
   portuguese: Texas
   romanian: Texas
   russian: Tehas
-  spanish: Texas
+  spanish: Nuevas Filipinas
   swedish: Texas
   turkish: Teksas
   ukrainian: Tekhas
@@ -12021,7 +12021,7 @@
   portuguese: Montana
   romanian: Montana
   russian: Montana
-  spanish: Montana
+  spanish: Montaña
   swedish: Montana
   turkish: Montana
   ukrainian: Montana
