--- a/states.yaml
+++ b/states.yaml
@@ -512,7 +512,7 @@
   hindi: Baragandee
   hungarian: Franche-Comté
   italian: Franca Contea
-  japanese: Furanshu konte
+  japanese: 'Furanshu konte '
   latvian: Franškontē
   lithuanian: Franš Konte
   norwegian: Franche Comte
@@ -760,7 +760,7 @@
   hindi: Limosin
   hungarian: Limousin
   italian: Limosino
-  japanese: 'Rimūzan '
+  japanese: Rimūzan
   latvian: Limuzēna
   lithuanian: Limuzenas
   norwegian: Limousin
