Removed all "shi" (means city) from chinese and japanese

--- a/provinces.yaml
+++ b/provinces.yaml
@@ -305,7 +305,7 @@
   hindi: Lubumbaashee
   hungarian: Lubumbashi
   italian: Lubumbashi
-  japanese: Rubunbashi
+  japanese: Rubunba
   latvian: Lubumbaši
   lithuanian: Lubumbašis
   norwegian: Elisabethville
@@ -516,7 +516,7 @@
   arab: Almashrubat
   belarusian: Bydhasc
   bulgarian: Bidgoshch
-  chinese: Bidegeshi
+  chinese: Bidege
   czech: Bydhošť
   danish: Bydgoszcz
   dutch: Bromberg
@@ -2116,7 +2116,7 @@
   arab: Ziurkh
   belarusian: Ciurych
   bulgarian: Tsyurih
-  chinese: Sulishi
+  chinese: Suli
   czech: Curych
   danish: Zürich
   dutch: Zurich
@@ -3665,7 +3665,7 @@
   hindi: Jeenaan
   hungarian: Csinan
   italian: Jinan
-  japanese: Sainanshi
+  japanese: Sainan
   latvian: Dzjinaņa
   lithuanian: Dzinanas
   norwegian: Jinan
@@ -4241,7 +4241,7 @@
   hindi: Kunaming
   hungarian: Kunming
   italian: Kunming
-  japanese: Kon meishi
+  japanese: Kon mei
   latvian: Kuņmina
   lithuanian: Kunmingas
   norwegian: Kunming
@@ -4689,7 +4689,7 @@
   hindi: Taiyuaan
   hungarian: Tajjüan
   italian: Taiyuan
-  japanese: Taiyōshi
+  japanese: Taiyō
   latvian: Taijuaņa
   lithuanian: Tajuanas
   norwegian: Taiyuan
@@ -4913,7 +4913,7 @@
   hindi: Tibliais
   hungarian: Tbiliszi
   italian: Tbilisi
-  japanese: Tobirishi
+  japanese: Tobiri
   latvian: Tbilisi
   lithuanian: Tbilisis
   norwegian: Tbilisi
@@ -5540,7 +5540,7 @@
   arab: Tabriz
   belarusian: Tebryz
   bulgarian: Tebriz
-  chinese: Dabulishi
+  chinese: Dabuli
   czech: Tabríz
   danish: Tabriz
   dutch: Tabriz
@@ -10257,7 +10257,7 @@
   hindi: Naanachaang
   hungarian: Nancsang
   italian: Nanchang
-  japanese: Nanshōshi
+  japanese: Nanshō
   latvian: Naņčana
   lithuanian: Nančangas
   norwegian: Nanchang
@@ -10564,7 +10564,7 @@
   arab: Marakish
   belarusian: Marrakech
   bulgarian: Marakesh
-  chinese: Malakashi
+  chinese: Malaka
   czech: Marrákeš
   danish: Marrakech
   dutch: Marrakesh
@@ -10756,7 +10756,7 @@
   arab: Alearish
   belarusian: Areashish
   bulgarian: Arish
-  chinese: Alishi
+  chinese: Ali
   czech: El-Arish
   danish: Al Arish
   dutch: El Arish
@@ -11345,7 +11345,7 @@
   hindi: Biloksee
   hungarian: Biloxi
   italian: Biloxi
-  japanese: Birokushi
+  japanese: Biroku
   latvian: Biloxi
   lithuanian: Biloxi
   norwegian: Biloxi
@@ -11377,7 +11377,7 @@
   hindi: Guiyaang
   hungarian: Kujjang
   italian: Guiyang
-  japanese: Kiyōshi
+  japanese: Kiyō
   latvian: Guijana
   lithuanian: Guijangas
   norwegian: Guiyang
@@ -11556,7 +11556,7 @@
   arab: Alqidiys Jims Min Alfursan
   belarusian: Sent-dzejms Rycarau
   bulgarian: Sveti Dzheims Na Ritsarite
-  chinese: Sheng Zhanmusi De Qishi
+  chinese: Sheng Zhanmusi De Qi
   czech: Svaty James Rytiru
   danish: Saint James Of The Ridders
   dutch: Saint James Of The Knights
@@ -15812,7 +15812,7 @@
   arab: Mareish
   belarusian: Khaghanet jaje
   bulgarian: Kahramanmarash
-  chinese: Qiahelamanmalashi
+  chinese: Qiahelamanmala
   czech: Kahramanmaraş
   danish: Kahramanmaraş
   dutch: Kahramanmaraş
@@ -17041,7 +17041,7 @@
   hindi: Chaingde
   hungarian: Changde
   italian: Changde
-  japanese: Jōtokushi
+  japanese: Jōtoku
   latvian: Changde
   lithuanian: Čangde
   norwegian: Changde
@@ -17169,7 +17169,7 @@
   hindi: Naananeeng
   hungarian: Nanning
   italian: Nanning
-  japanese: Nanneishi
+  japanese: Nannei
   latvian: Naņnina
   lithuanian: Naningas
   norwegian: Nanning
@@ -19012,7 +19012,7 @@
   arab: Alahwaz
   belarusian: Komin
   bulgarian: Ahvaz
-  chinese: Awashi
+  chinese: Awa
   czech: Ahváz
   danish: Ahvaz
   dutch: Ahvaz
@@ -22020,7 +22020,7 @@
   arab: Almakana
   belarusian: Nisy
   bulgarian: Nish
-  chinese: Nishi
+  chinese: Ni
   czech: Niš
   danish: Niš
   dutch: Niš
@@ -22129,7 +22129,7 @@
   hindi: Bois
   hungarian: Boise
   italian: Boise
-  japanese: Boishi
+  japanese: Boi
   latvian: Boisisitija
   lithuanian: Boizis
   norwegian: Boise
@@ -22609,7 +22609,7 @@
   hindi: Ke Baare Mein
   hungarian: Jászvásár
   italian: Iaşi
-  japanese: Yashi
+  japanese: Ya
   latvian: Jasi
   lithuanian: Jasai
   norwegian: Iasi
@@ -23857,7 +23857,7 @@
   hindi: Samajhaute Ke Nijee Rn
   hungarian: Csengcsou
   italian: Zhengzhou
-  japanese: Tei shūshi
+  japanese: Tei shū
   latvian: Džendžou
   lithuanian: Džengdžou
   norwegian: Zhengzhou
@@ -23921,7 +23921,7 @@
   hindi: Ningbo
   hungarian: Ningpo
   italian: Ningbo
-  japanese: Neihashi
+  japanese: Neiha
   latvian: Ninbo
   lithuanian: Ningbo
   norwegian: Ningbo
@@ -24465,7 +24465,7 @@
   hindi: Naagoya
   hungarian: Nagoja
   italian: Nagoya
-  japanese: Nakoyashi
+  japanese: Nakoya
   latvian: Nagoja
   lithuanian: Nagoja
   norwegian: Nagoya
@@ -25041,7 +25041,7 @@
   hindi: Guilin
   hungarian: Kujlin
   italian: Guilin
-  japanese: Keirinshi
+  japanese: Keirin
   latvian: Guilin
   lithuanian: Guilinas
   norwegian: Guilin
@@ -25169,7 +25169,7 @@
   hindi: Saapporo
   hungarian: Szapporo
   italian: Sapporo
-  japanese: Sahhoroshi
+  japanese: Sahhoro
   latvian: Saporo
   lithuanian: Saporas
   norwegian: Sapporo
@@ -29924,7 +29924,7 @@
   arab: Naha
   belarusian: Nicoha hodu
   bulgarian: Naha
-  chinese: Nabashi
+  chinese: Naba
   czech: Naha
   danish: Hud
   dutch: Naha
@@ -30884,7 +30884,7 @@
   arab: Qunduz
   belarusian: Kunduz
   bulgarian: Kunduz
-  chinese: Kundushi
+  chinese: Kundu
   czech: Kundúz
   danish: Kunduz
   dutch: Kunduz
@@ -32369,7 +32369,7 @@
   hindi: Blaik Stons
   hungarian: Piedras Negras
   italian: Piedras Negras
-  japanese: Kuroi ishi
+  japanese: Kuroi i
   latvian: Piedras Negras
   lithuanian: Piedras Negras
   norwegian: Svarte Steiner
