Fixed once for all encoding problems

--- a/provinces.yaml
+++ b/provinces.yaml
@@ -1346,16 +1346,16 @@
   StateID: 265
   albanian: Mikhaylovka
   arab: Mikhaylufka
-  belarusian: Michajlaŭka
-  bulgarian: Mikhaĭlovka
-  chinese: Mǐhāyīluòfūkǎ
+  belarusian: Michajlaŭka
+  bulgarian: Mikhaĭlovka
+  chinese: Mǐhāyīluòfūkǎ
   czech: Michajlovka
   danish: Mikhaylovka
   dutch: Mikhaylovka
   english: Mikhaylovka
   estonian: Mihhailovka
   finnish: Mikhaylovka
-  french: Mikhaïlovka
+  french: Mikhaïlovka
   german: Michailaue
   greek: Mikhaylovka
   hindi: Volgograad
@@ -3588,7 +3588,7 @@
   arab: Alnaasira
   belarusian: Nazaret
   bulgarian: Nazaret
-  chinese: Násālēi
+  chinese: Násālēi
   czech: Nazaret
   danish: Nazareth
   dutch: Nazareth
@@ -3597,16 +3597,16 @@
   finnish: Nasaret
   french: Nazareth
   german: Nazareth
-  greek: Nazarét
+  greek: Nazarét
   hindi: Naazarath
-  hungarian: Názáret
+  hungarian: Názáret
   italian: Nazareth
   japanese: Nazare
-  latvian: Nācarete
+  latvian: Nācarete
   lithuanian: Nazaretas
   norwegian: Nazareth
   polish: Nazaret
-  portuguese: Nazaré
+  portuguese: Nazaré
   romanian: Nazaret
   russian: Nazareta
   spanish: Nazaret
@@ -19461,7 +19461,7 @@
   belarusian: El-aof
   bulgarian: Ayun
   chinese: Ayou'en
-  czech: Al-´Ajún
+  czech: Al- ́Ajún
   danish: El Aaiún
   dutch: Al Ajoen
   english: Laayoune
@@ -29382,7 +29382,7 @@
   bulgarian: Izmit
   chinese: Yizimite
   czech: İzmit
-  danish: İzmit
+  danish: İzmit
   dutch: İzmit
   english: İzmit
   estonian: İzmit
@@ -29396,7 +29396,7 @@
   japanese: Izumitto
   latvian: Izmita
   lithuanian: Izmitas
-  norwegian: İzmit
+  norwegian: İzmit
   polish: İzmit
   portuguese: İzmit
   romanian: Izmit
